in Filters layout done

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     />
   <!--   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <script src="https://kit.fontawesome.com/104915c1ae.js" crossorigin="anonymous"></script>
     <title>Users Manager</title>
   </head>
   <body>
